# tauri-svelte

./: package.json  pnpm-lock.yaml  tailwind.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
